# Rython

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml
python/cli/: main.py  performance.txt  utility.py
python/rython/: calc.pyi  main.py  rython_calc.pyi
src/: lib.rs
test/rython/: test_rython_calc.py
