[package]
name = "rython"
version = "0.4.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rython_calc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.2"

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
check = "1.0.0"
clippy = "0.0.302"
fmt = "0.1.0"
